# micro_message

./: CMakeLists.txt
include/: string_man.h  subscribers.h  tcp_server.h  udp_server.h  version.h.in
src/: main.c  string_man.c  subscribers.c  tcp_server.c  tpc_server.c  udp_server.c
